Cardicac_Health_Disease_Prediction.ipynb

--- a/Cardicac_Health_Disease_Prediction.ipynb
+++ b/Cardicac_Health_Disease_Prediction.ipynb
@@ -1392,10 +1392,10 @@
         "Binary logistic regression\n",
         "\n",
         "\n",
-        "0 --> Healthy Heart\n",
+        "0 --> Defective Heart\n",
         "\n",
         "\n",
-        "1 --> Defective Heart"
+        "1 --> Healthy Heart"
       ]
     },
     {
