Cardicac_Health_Disease_Prediction.ipynb

--- a/Cardicac_Health_Disease_Prediction.ipynb
+++ b/Cardicac_Health_Disease_Prediction.ipynb
@@ -1715,9 +1715,9 @@
         "print(prediction)\n",
         "\n",
         "if (prediction[0]== 1):\n",
-        "  print('The Person does not have a Heart Disease')\n",
+        "  print('The Person have a Heart Disease')\n",
         "else:\n",
-        "  print('The Person have a Heart Disease')"
+        "  print('The Person does not have a Heart Disease')"
       ]
     }
   ],
